--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -390,6 +390,9 @@
     <ClCompile Include="client\renderer\r_postprocess.c">
       <Filter>Source Files\client\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="client\renderer\r_stereo.c">
+      <Filter>Source Files\client\renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
@@ -519,6 +522,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="client\sound\include\qal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="client\renderer\include\r_stereo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
