Use system jpeglib.h on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,6 @@ set(LINUX_SOURCES
   backends/unix/zip/unzip.c
   backends/unix/zip/ioapi.c
 )
-add_definitions(-DNO_STEAM)
+add_definitions(-DNO_STEAM -DUSE_SYSTEM_JPEGLIB)
 add_executable(quake2vr ${BASE_SOURCES} ${LINUX_SOURCES})
 target_link_libraries(quake2vr ${SDL2_LIBRARIES} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} -L${quake2vr_SOURCE_DIR} GLEW ogg vorbis vorbisfile jpeg ovr z)
