--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,15 @@ pip-log.txt
 *.exe
 
 external/
+
+
+################
+# CMake 
+################
+
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
