Update Linux build environment
-Place output files in 'build/'
-Generate vrquake2.pk3 as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project (quake2vr)
 set (quake2vr_VERSION_MAJOR 1)
 set (quake2vr_VERSION_MINOR 0)
 
+set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/)
+set (LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/)
+
 include (CheckLibraryExists)
 include (FindOpenGL)
 
@@ -199,3 +202,8 @@ target_link_libraries(quake2vr -L${quake2vr_SOURCE_DIR} ovr)
 endif (!OVR_DYNAMIC)
 
 add_subdirectory(game)
+
+add_custom_target(data ALL
+  COMMAND ${CMAKE_SOURCE_DIR}/misc/mkpk3.sh
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/misc/
+)
