Put output files in the CMake binary directory (to allow multiple builds from the same source directory)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project (quake2vr)
 set (quake2vr_VERSION_MAJOR 1)
 set (quake2vr_VERSION_MINOR 0)
 
-set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/)
-set (LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/)
+set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
+set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 include (CheckLibraryExists)
 include (FindOpenGL)
