Move mission pack submodule to game_mp for consistency + update game commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "missionpacksrc"]
-	path = missionpacksrc
-	url = https://github.com/dghost/q2vr-missionpack
 [submodule "game"]
 	path = game
 	url = https://github.com/q2vr/vrgamex86.git
+[submodule "game_mp"]
+	path = game_mp
+	url = https://github.com/q2vr/mpgamex86.git
