--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -393,6 +393,12 @@
     <ClCompile Include="client\renderer\r_stereo.c">
       <Filter>Source Files\client\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="qcommon\zip\unzip.c">
+      <Filter>Source Files\common</Filter>
+    </ClCompile>
+    <ClCompile Include="qcommon\zip\ioapi.c">
+      <Filter>Source Files\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
