Move hashing functions out of shared directory
Also fix some issues with exported types (required for game dll to use)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,6 @@ set(COMMON_HEADERS
 	qcommon/qfiles.h
 	qcommon/shared/game.h
 	qcommon/shared/q_shared.h
-	qcommon/shared/q_hash.h
 	qcommon/vid_modes.h
 	qcommon/wildcard.h
 	qcommon/zip/unzip.h
@@ -60,12 +59,12 @@ set(COMMON_SOURCES
   qcommon/cvar.c
   qcommon/files.c
   qcommon/glob.c
+  qcommon/hash.c
   qcommon/md4.c
   qcommon/net_chan.c
   qcommon/pmove.c
   qcommon/shared/m_flash.c
   qcommon/shared/q_shared.c
-  qcommon/shared/q_hash.c
   qcommon/wildcard.c
   qcommon/murmur3/murmur3.c
   qcommon/zip/ioapi.c
